@@ -3,7 +3,9 @@ package com.fitness.service;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fitness.dto.AuditLogDTO;
 import com.fitness.entity.AuditLog;
+import com.fitness.enums.Role;
 import com.fitness.entity.SystemUser;
+import com.fitness.exception.ResourceNotFoundException;
 import com.fitness.repository.AuditLogRepository;
 import com.fitness.repository.SystemUserRepository;
 import org.junit.jupiter.api.AfterEach;
@@ -17,6 +19,8 @@ import org.modelmapper.ModelMapper;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -32,21 +36,30 @@ public class AuditLogServiceTest {
 
     @Mock
     private AuditLogRepository auditRepo;
-
     @Mock
     private SystemUserRepository userRepo;
-
     @Mock
     private ModelMapper mapper;
-
     @Mock
     private ObjectMapper objectMapper;
 
+    private SystemUser mockUser;
+    private AuditLog mockLog;
+
     @BeforeEach
     void setUp() {
-        SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken("testuser", "password")
-        );
+        mockUser = new SystemUser();
+        mockUser.setUserId(1L);
+        mockUser.setUsername("testuser");
+        mockUser.setRole(Role.ADMIN);
+
+        mockLog = new AuditLog();
+        mockLog.setAuditId(100L);
+        mockLog.setPerformedBy(mockUser);
+        mockLog.setEntityName("TestEntity");
+        mockLog.setEntityId(10L);
+        mockLog.setAction(AuditLog.Action.CREATE);
+        mockLog.setCreatedAt(LocalDateTime.now());
     }
 
     @AfterEach
@@ -56,41 +69,72 @@ public class AuditLogServiceTest {
 
     @Test
     void log_Success() throws Exception {
-        SystemUser user = new SystemUser();
-        user.setUserId(1L);
+        when(userRepo.findById(1L)).thenReturn(Optional.of(mockUser));
+        when(objectMapper.readTree(anyString())).thenThrow(new RuntimeException("Not json"));
+        when(objectMapper.writeValueAsString(anyString())).thenReturn("\"test\"");
 
-        when(userRepo.findById(1L)).thenReturn(Optional.of(user));
-
-        auditLogService.log(1L, "Member", 1L, AuditLog.Action.CREATE, "old", "new");
+        auditLogService.log(1L, "TestEntity", 10L, AuditLog.Action.CREATE, "old", "new");
 
         verify(auditRepo).save(any(AuditLog.class));
     }
 
     @Test
-    void logForCurrentUser_Authenticated_Success() {
-        SystemUser user = new SystemUser();
-        user.setUserId(1L);
-
-        when(userRepo.findByUsername("testuser")).thenReturn(Optional.of(user));
-        when(userRepo.findById(1L)).thenReturn(Optional.of(user));
-        
-        auditLogService.logForCurrentUser("Member", 1L, AuditLog.Action.UPDATE, "old", "new");
-        
-        verify(auditRepo).save(any(AuditLog.class));
+    void log_UserNotFound() {
+        when(userRepo.findById(1L)).thenReturn(Optional.empty());
+        assertThrows(ResourceNotFoundException.class, () -> 
+            auditLogService.log(1L, "TestEntity", 10L, AuditLog.Action.CREATE, "old", "new"));
     }
 
     @Test
     void getAllLogs_Success() {
-        AuditLog log = new AuditLog();
-        log.setAuditId(1L);
-        log.setEntityName("Member");
-        log.setEntityId(1L);
+        when(auditRepo.findAllByOrderByCreatedAtDesc()).thenReturn(Collections.singletonList(mockLog));
+        List<AuditLogDTO> results = auditLogService.getAllLogs();
+        assertEquals(1, results.size());
+        assertEquals(100L, results.get(0).getAuditId());
+    }
 
-        when(auditRepo.findAllByOrderByCreatedAtDesc()).thenReturn(List.of(log));
+    @Test
+    void getLogsByUser_Success() {
+        when(auditRepo.findByPerformedByUserIdOrderByCreatedAtDesc(1L)).thenReturn(Collections.singletonList(mockLog));
+        List<AuditLogDTO> results = auditLogService.getLogsByUser(1L);
+        assertEquals(1, results.size());
+    }
 
-        List<AuditLogDTO> result = auditLogService.getAllLogs();
+    @Test
+    void getLogsByEntity_Success() {
+        when(auditRepo.findByEntityNameAndEntityId("TestEntity", 10L)).thenReturn(Collections.singletonList(mockLog));
+        List<AuditLogDTO> results = auditLogService.getLogsByEntity("TestEntity", 10L);
+        assertEquals(1, results.size());
+    }
 
-        assertEquals(1, result.size());
-        assertEquals(1L, result.get(0).getAuditId());
+    @Test
+    void logForSystem_Success() throws Exception {
+        when(userRepo.findById(1L)).thenReturn(Optional.of(mockUser));
+        
+        auditLogService.logForSystem("TestEntity", 10L, AuditLog.Action.CREATE, null, null);
+        
+        verify(auditRepo).save(any(AuditLog.class));
+    }
+
+    @Test
+    void logForCurrentUser_WithAuth_Success() throws Exception {
+        SecurityContextHolder.getContext().setAuthentication(
+            new UsernamePasswordAuthenticationToken("testuser", "pass")
+        );
+        when(userRepo.findByUsername("testuser")).thenReturn(Optional.of(mockUser));
+        when(userRepo.findById(1L)).thenReturn(Optional.of(mockUser));
+
+        auditLogService.logForCurrentUser("TestEntity", 10L, AuditLog.Action.UPDATE, null, null);
+
+        verify(auditRepo).save(any(AuditLog.class));
+    }
+
+    @Test
+    void logForCurrentUser_NoAuth_FallbackToSystem() throws Exception {
+        when(userRepo.findById(1L)).thenReturn(Optional.of(mockUser));
+
+        auditLogService.logForCurrentUser("TestEntity", 10L, AuditLog.Action.UPDATE, null, null);
+
+        verify(auditRepo).save(any(AuditLog.class));
     }
 }
